[package]
name = "aoko"
version = "0.3.0-alpha.3" # Alpha(α) --> Beta(β) --> Delta(test) --> RC(Release Candidate)
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2021"
description = "A Rust extension library."
repository = "https://github.com/hzqd/aoko"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"] # Default to using the std
std = ["no-std-compat/std"]
paral = ["rayon"]

# A no_std compatibility layer
[dependencies.no-std-compat]
version = "0.4"
features = ["alloc"]

# A iter extension
[dependencies.itertools]
version = "0.10"

# A data parallelism library
[dependencies.rayon]
version = "1.5"
optional = true

[package.metadata.docs.rs]
# Pass `--all-features` to Cargo
all-features = true
