[package]
name = "aoko"
version = "0.3.0-alpha.30" # Alpha(α) --> Beta(β) --> Delta(δ) --> Eta(η) --> Inda(India) --> Lima --> Oca(Oscar) --> Papa -> QBa(丘比) --> Roma -> Sierra --> Tanga(Tango) --> Vodka(Gin) --> Zala(Zulu)
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2021"
description = "A Rust extension library."
repository = "https://github.com/hzqd/aoko"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"] # Default to using the features
full = ["std", "async", "paral"]
std = ["no-std-compat2/std", "minstant"]
async = ["tokio"]
paral = ["rayon"]

# A no_std compatibility layer
[dependencies.no-std-compat2]
version = "0.4"
features = ["alloc"]

# A timing library
[dependencies.minstant]
version = "0.1"
optional = true

# An iter extension
[dependencies.itertools]
version = "0.10"

# An async runtime
[dependencies.tokio]
version = "1.24"
optional = true
features = ["full"]

# A data parallelism library
[dependencies.rayon]
version = "1.6"
optional = true

[package.metadata.docs.rs]
# Pass `--all-features` to Cargo
all-features = true
